tests/baselines/reference/twoAccessorsWithSameName2.errors.txt
twoAccessorsWithSameName2.ts(2,16): error TS2300: Duplicate identifier 'x'.
twoAccessorsWithSameName2.ts(3,16): error TS2300: Duplicate identifier 'x'.
twoAccessorsWithSameName2.ts(7,16): error TS2300: Duplicate identifier 'x'.
twoAccessorsWithSameName2.ts(8,16): error TS2300: Duplicate identifier 'x'.


==== twoAccessorsWithSameName2.ts (4 errors) ====
    class C {
        static get x() { return 1; }
                   ~
!!! error TS2300: Duplicate identifier 'x'.
        static get x() { return 1; } // error
                   ~
!!! error TS2300: Duplicate identifier 'x'.
    }
    
    class D {
        static set x(v) {  }
                   ~
!!! error TS2300: Duplicate identifier 'x'.
        static set x(v) {  } // error
                   ~
!!! error TS2300: Duplicate identifier 'x'.
    }
    
    class E {
        static get x() {
            return 1;
        }
        static set x(v) { }
    }